; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_ftp.c_ftp_doing.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_ftp.c_ftp_doing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"DO phase failed\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"DO phase is complete2\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.connectdata*, i32*)* @ftp_doing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ftp_doing(%struct.connectdata* %0, i32* %1) #0 {
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @ftp_multi_statemach(%struct.connectdata* %6, i32* %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %13 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @infof(i32 %14, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 @DEBUGF(i32 %15)
  br label %31

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %30

21:                                               ; preds = %17
  %22 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %23 = load i32, i32* @FALSE, align 4
  %24 = call i64 @ftp_dophase_done(%struct.connectdata* %22, i32 %23)
  store i64 %24, i64* %5, align 8
  %25 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %26 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @infof(i32 %27, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %29 = call i32 @DEBUGF(i32 %28)
  br label %30

30:                                               ; preds = %21, %17
  br label %31

31:                                               ; preds = %30, %11
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}

declare dso_local i64 @ftp_multi_statemach(%struct.connectdata*, i32*) #1

declare dso_local i32 @DEBUGF(i32) #1

declare dso_local i32 @infof(i32, i8*) #1

declare dso_local i64 @ftp_dophase_done(%struct.connectdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
